--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <h1 class="logo">loruki</h1>
             <nav>
-                <ul>
+                <ul class="list">
                     <li><a href="index.html">home</a></li>
                     <li><a href="features.html">Features</a></li>
                     <li><a href="docs.html">Docs</a></li>
