--- a/html/index.html
+++ b/html/index.html
@@ -3,27 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="css/style.css">
-    <title>robokus | THe cloud station </title>
-
+    <link rel="stylesheet" href="../css/style.css">
+   <title>robuki| the cloud setting services</title>                                                                                                                                                                  
 </head>
 <body>
-    <!-- navbar -->
-     <div class="navbar">
-        <div class="container">
-            <h1 class="logo">loruki</h1>
+    <!-- Navbar -->
+    <div class="navbar">
+        <div class="container flex">
+             <h1 class="logo"><a href="index.html">Loruki.</a></h1>
             <nav>
-                <ul class="list">
-                    <li><a href="index.html">home</a></li>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="features.html">Features</a></li>
                     <li><a href="docs.html">Docs</a></li>
                 </ul>
             </nav>
         </div>
-
-     </div>
-     <!-- caption and card -->
-
+    </div>
     
 </body>
 </html>
